fix x-axis overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-
   background-color: #282c34;
+  overflow-x: hidden;
 }
 
 .App-logo {
